--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+* {
+	box-sizing: border-box;
 	list-style: none;
 	margin: 0;
 	text-decoration: none;
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter", sans-serif;
 }
 body {
 	overflow-x: hidden;
@@ -13,6 +14,9 @@ body {
 	background-image: url("./img/background_header.png");
 }
 nav {
+	position: absolute;
+	top: 0;
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -24,9 +28,9 @@ nav {
 		justify-content: space-evenly;
 		align-items: center;
 	}
-	a{
-		padding: .6rem 2rem;
-		transition: background .5s;
+	a {
+		padding: 0.6rem 2rem;
+		transition: background 0.5s;
 		text-align: center;
 		font-size: 1.5rem;
 		color: rgb(255, 255, 255);
@@ -34,13 +38,100 @@ nav {
 			background-color: rgb(33, 42, 61);
 		}
 	}
-	.dreamstar-name{
-		&:hover{
+	.dreamstar-name {
+		padding-inline: 0rem;
+
+		&:hover {
 			background-color: #111;
 		}
 	}
 }
 .content {
-	width: 100%;
-	margin: 2rem;
+	width: 100vw;
+	display: grid;
+	place-items: center;
+	.container-home {
+		margin-top: 5rem;
+		display: flex;
+		padding: 5vw 1rem;
+		column-gap: 15vw;
+		align-items: center;
+		flex-wrap: wrap;
+		justify-content: space-around;
+		// *{
+		// 		border: #111 1px solid;
+		// }
+		.container-child {
+			min-height: 30vw;
+			display: flex;
+			flex-direction: column;
+			color: #fff;
+			h1 {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				text-align: center;
+				height: 10rem;
+				vertical-align: middle;
+				margin-top: 2rem;
+				font-size: 5rem;
+			}
+			.news {
+				width: 40vw;
+				margin-top: 2rem;
+				h2 {
+					text-align: center;
+					font-size: 2rem;
+					text-decoration: underline;
+					margin-bottom: 1.5rem;
+				}
+				ul {
+					&::-webkit-scrollbar {
+						width: 15px;
+					}
+					&::-webkit-scrollbar-track {
+						border: 2px rgb(255, 255, 255) solid;
+						border-radius: 20px;
+					}
+					&::-webkit-scrollbar-thumb {
+						background-color: rgb(255, 255, 255);
+						border-radius: 20px;
+					}
+					overflow-y: scroll;
+					height: 15vw;
+					li {
+						border-radius: 5px;
+						border: rgb(255, 255, 255) solid 1px;
+						margin: 15px;
+						h3,
+						p {
+							padding: 0.5rem;
+						}
+					}
+				}
+			}
+		}
+	}
+	.shadow-bg {
+		backdrop-filter: blur(5px);
+		background-color: rgba(17, 17, 17, 0.294);
+	}
+	.elita-logo {
+		height: 30vw;
+		width: 30vw;
+		min-width: 12rem;
+		min-height: 12rem;
+	}
+}
+@media screen and (max-width: 965px) and(min-width: 0) {
+	.container-child .news {
+		width: 90vw !important;
+		ul{
+			
+			height: 15rem !important;
+		}
+	}
+	.container-home{
+		column-gap: 0 !important;
+	}
 }
