--- a/src/App.scss
+++ b/src/App.scss
@@ -9,58 +9,60 @@
 body {
 	overflow-x: hidden;
 	min-height: 100vh;
+	width: 100vw;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-image: url("./img/background_header.png");
 }
-nav {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding-inline: 2rem;
+header {
 	background-color: #111;
-	ul {
-		width: 60%;
+	padding-inline: 2rem;
+	nav {
+		width: 100%;
 		display: flex;
-		justify-content: space-evenly;
+		justify-content: space-between;
 		align-items: center;
-	}
-	a {
-		padding: 0.6rem 2rem;
-		transition: background 0.5s;
-		text-align: center;
-		font-size: 1.5rem;
-		color: rgb(255, 255, 255);
-		&:hover {
-			background-color: rgb(33, 42, 61);
+		ul {
+			height: 4rem;
+			width: 50%;
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			li {
+				display: flex;
+				align-items: center;
+				padding: 0 1rem;
+				height: 4rem;
+				transition: background 0.5s;
+				&:hover {
+					background-color: rgb(33, 42, 61);
+				}
+			}
 		}
-	}
-	.dreamstar-name {
-		padding-inline: 0rem;
-
-		&:hover {
-			background-color: #111;
+		a {
+			text-align: center;
+			font-size: 2vw;
+			color: rgb(255, 255, 255);
+		}
+		.dreamstar-name {
+			padding-inline: 0rem;
+			&:hover {
+				background-color: #111;
+			}
 		}
 	}
 }
-.content {
-	width: 100vw;
+.container-home-con {
 	display: grid;
 	place-items: center;
 	.container-home {
 		margin-top: 5rem;
 		display: flex;
-		padding: 5vw 1rem;
+		padding: 5vw 0;
 		column-gap: 15vw;
 		align-items: center;
 		flex-wrap: wrap;
 		justify-content: space-around;
-		// *{
-		// 		border: #111 1px solid;
-		// }
 		.container-child {
 			min-height: 30vw;
 			display: flex;
@@ -74,7 +76,7 @@ nav {
 				height: 10rem;
 				vertical-align: middle;
 				margin-top: 2rem;
-				font-size: 5rem;
+				font-size: 7vw;
 			}
 			.news {
 				width: 40vw;
@@ -84,8 +86,11 @@ nav {
 					font-size: 2rem;
 					text-decoration: underline;
 					margin-bottom: 1.5rem;
+					top: 10px;
+					position: relative;
 				}
 				ul {
+					padding: 10px;
 					&::-webkit-scrollbar {
 						width: 15px;
 					}
@@ -117,21 +122,59 @@ nav {
 		background-color: rgba(17, 17, 17, 0.294);
 	}
 	.elita-logo {
-		height: 30vw;
-		width: 30vw;
+		height: 32vw;
+		width: 32vw;
 		min-width: 12rem;
 		min-height: 12rem;
 	}
 }
-@media screen and (max-width: 965px) and(min-width: 0) {
-	.container-child .news {
-		width: 90vw !important;
-		ul{
-			
-			height: 15rem !important;
+.discord-nember-container {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	
+	.discord-member {
+		margin: 10px;
+		width: 200px;
+		height: auto;
+		img {
+			border-radius: 50%;
+			width: 100px;
+			height: auto;
+		}
+		.discord-avatar {
+			span {
+				&::after {
+					content: "";
+					position: absolute;
+					width: 15px;
+					height: 15px;
+					border-radius: 50%;
+				}
+			}
+		}
+		.online {
+			&::after {
+				background-color: #43b581;
+			}
+		}
+		.dnd {
+			&::after {
+				background-color: #f04747;
+			}
+		}
+		.idle {
+			&::after {
+				background-color: #faa61a;
+			}
 		}
 	}
-	.container-home{
-		column-gap: 0 !important;
+}
+@media screen and (max-width: 965px) and (min-width: 0) {
+	.news {
+		width: 80vw !important;
+		ul {
+			height: 15rem !important;
+		}
 	}
 }
