--- a/src/App.scss
+++ b/src/App.scss
@@ -13,10 +13,11 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-image: url("./img/background_header.png");
+	background-position: center;
 }
 header {
-	background-color: #111;
-	padding-inline: 2rem;
+	background-color: #23272a;
+	padding-inline: 2rem 0;
 	nav {
 		width: 100%;
 		display: flex;
@@ -24,30 +25,36 @@ header {
 		align-items: center;
 		ul {
 			height: 4rem;
-			width: 50%;
 			display: flex;
-			justify-content: space-evenly;
+			justify-content: center;
 			align-items: center;
+			gap: 0;
 			li {
 				display: flex;
 				align-items: center;
-				padding: 0 1rem;
+				justify-content: center;
 				height: 4rem;
+				width: 15vw;
 				transition: background 0.5s;
 				&:hover {
-					background-color: rgb(33, 42, 61);
+					background-color: rgb(255, 255, 255);
 				}
 			}
 		}
 		a {
-			text-align: center;
 			font-size: 2vw;
 			color: rgb(255, 255, 255);
+			transition: color 0.5s;
+			&:hover {
+
+				color: #23272a;
+			}
 		}
 		.dreamstar-name {
 			padding-inline: 0rem;
 			&:hover {
-				background-color: #111;
+				color: #fff;
+				background-color: #23272a;
 			}
 		}
 	}
@@ -134,7 +141,7 @@ header {
 	background-color: #23272A;
 	flex-direction: column;
 	height: 50vh;
-	width: 30rem;
+	width: 30vw;
 	padding-left: 10px;
 	min-height: 30rem;
 	overflow-y: scroll;
@@ -213,11 +220,61 @@ header {
 		}
 	}
 }
+.container-discord{
+	display: flex;
+	justify-content: space-around;
+	text-align: center;
+	flex-wrap: wrap;
+	align-items: center;
+	margin-top: 3rem;
+	h1{
+		color: #fff;
+		background-color: #23272a;
+		font-size: 4vw;
+		width: 100%;
+		border-radius: 10px;
+		padding: 1.5rem;
+		box-shadow: 0px -10px  #ffffff inset;
+
+	}
+	.container-online-players{
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
+	.discord-invite{
+		background-color: #23272a;
+		font-size: 5vw;
+		margin-block: 2rem;
+		transition: box-shadow .5s;
+		color: #fff;
+		padding: 4rem;
+		box-shadow: 0px 0px inset;
+		border-radius: 10px;
+		&:hover{
+			box-shadow: 0px -15rem  #ffffff2d inset;
+		}
+		span{
+			color: #fff;	
+		}
+	}
+}
 @media screen and (max-width: 965px) and (min-width: 0) {
 	.news {
 		width: 80vw !important;
 		ul {
 			height: 15rem !important;
+		}
+	}
+}
+@media screen and (max-width: 1200px) and (min-width: 0) {
+	.discord-nember-container{
+		width: 90vw;
+		
+	}
+	.container-online-players{
+		h1{
+			width: 70%;
 		}
 	}
 }
