--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@ body {
 }
 header {
 	background-color: #23272a;
-	padding-inline: 2rem 0;
+	padding-inline: 2rem 0rem;
 	nav {
 		width: 100%;
 		display: flex;
@@ -38,16 +38,21 @@ header {
 				transition: background 0.5s;
 				&:hover {
 					background-color: rgb(255, 255, 255);
+					a {
+						color: #23272a;
+					}
 				}
 			}
 		}
 		a {
 			font-size: 2vw;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 			color: rgb(255, 255, 255);
 			transition: color 0.5s;
-			&:hover {
-				color: #23272a;
-			}
+			width: 100%;
+			height: 100%;
 		}
 		.dreamstar-name {
 			padding-inline: 0rem;
@@ -211,13 +216,13 @@ header {
 		background-color: #23272a;
 		font-size: 5vw;
 		margin-block: 2rem;
-		transition: box-shadow 0.5s;
+		transition: box-shadow 0.9s;
 		color: #fff;
 		padding: 4rem;
-		box-shadow: 0px 0px inset;
+		box-shadow: 0px 0px inset, 0px 0px inset, 0px 0px inset;
 		border-radius: 10px;
 		&:hover {
-			box-shadow: 0px -15rem #ffffff2d inset;
+			box-shadow: 0px -40rem #ffffff2d inset,  0px -10rem #23272a inset, 0px -20rem #23272a inset;
 		}
 		span {
 			color: #fff;
@@ -230,6 +235,9 @@ header {
 		ul {
 			height: 15rem !important;
 		}
+	}
+	header{
+		padding-inline: 2rem 1rem;
 	}
 }
 @media screen and (max-width: 1200px) and (min-width: 0) {
